--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,3 @@
 browser =chrome
-Terna = https://eacs-col.servizi.prv/
-Time_Sleep = 700
+Terna = https://eacs-col.servizi.prv/test
+Time_Sleep = 900
